{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 287,
  "lineage": "c85f948d-c734-2805-eedf-a109ed0bab66",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:479697359409:loadbalancer/dev-web",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-web-108570727.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "dev-web",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "dev-web",
            "security_groups": [
              "sg-0acf75f3ae90878f3"
            ],
            "source_security_group": "479697359409/web-elb",
            "source_security_group_id": "sg-0acf75f3ae90878f3",
            "subnets": [
              "subnet-0a7432970d7cbe88b",
              "subnet-0ae2c9a3ce5f502ab"
            ],
            "tags": {
              "Name": "dev-web",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-web",
              "Terraform": "true"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Network.aws_subnet.subnet1",
            "module.Network.aws_subnet.subnet2",
            "module.Network.aws_vpc.vpc1",
            "module.Network.data.aws_availability_zones.available",
            "module.SecurityGroup.aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:internet-gateway/igw-0d9400780e8a5276d",
            "id": "igw-0d9400780e8a5276d",
            "owner_id": "479697359409",
            "tags": {
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dafd11580042809b"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:route-table/rtb-04b10c26711c480fe",
            "id": "rtb-04b10c26711c480fe",
            "owner_id": "479697359409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9400780e8a5276d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dafd11580042809b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.gateway1",
            "module.Network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea59f1198593de3a",
            "route_table_id": "rtb-04b10c26711c480fe",
            "subnet_id": "subnet-0ae2c9a3ce5f502ab"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.gateway1",
            "module.Network.aws_route_table.route_table1",
            "module.Network.aws_subnet.subnet1",
            "module.Network.aws_vpc.vpc1",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3220aa6aa155d78",
            "route_table_id": "rtb-04b10c26711c480fe",
            "subnet_id": "subnet-0a7432970d7cbe88b"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.gateway1",
            "module.Network.aws_route_table.route_table1",
            "module.Network.aws_subnet.subnet2",
            "module.Network.aws_vpc.vpc1",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:subnet/subnet-0ae2c9a3ce5f502ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae2c9a3ce5f502ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "479697359409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dafd11580042809b"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc1",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:subnet/subnet-0a7432970d7cbe88b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7432970d7cbe88b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "479697359409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dafd11580042809b"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc1",
            "module.Network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:vpc/vpc-0dafd11580042809b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a88af234d7c70923",
            "default_route_table_id": "rtb-081c55a1e8cc5fd60",
            "default_security_group_id": "sg-0822d05f8e0bcf6c0",
            "dhcp_options_id": "dopt-2f075155",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dafd11580042809b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081c55a1e8cc5fd60",
            "owner_id": "479697359409",
            "tags": {
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:security-group/sg-0acf75f3ae90878f3",
            "description": "web elb security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acf75f3ae90878f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-elb",
            "name_prefix": "",
            "owner_id": "479697359409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-elb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "web-elb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dafd11580042809b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:479697359409:security-group/sg-05e94bc8c54acf7bf",
            "description": "web instances security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e94bc8c54acf7bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.162.254.33/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0acf75f3ae90878f3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0acf75f3ae90878f3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-instances",
            "name_prefix": "",
            "owner_id": "479697359409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-instances",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "web-instances",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dafd11580042809b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc1",
            "module.SecurityGroup.aws_security_group.elb_sg"
          ]
        }
      ]
    }
  ]
}